deploy/resources/dev/ingress-tfk.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-traefik-internal
  namespace: devex-mcp-dev
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    traefik.ingress.kubernetes.io/router.middlewares: traefik-internal-cors@kubernetescrd
spec:
  rules:
  - host: api.platform.dev.rappi.com
    http:
      paths:
      - path: /v1/devex-mcp
        pathType: Prefix
        backend:
          service:
            name: devex-mcp
            port:
              number: 80
